support preference file config