@@ -17,6 +17,7 @@
         <lombok.version>1.18.24</lombok.version>
         <commons-io.version>2.11.0</commons-io.version>
         <guava.version>31.1-jre</guava.version>
+        <snakeyaml.version>2.2</snakeyaml.version>
     </properties>
 
     <dependencies>
@@ -99,6 +100,11 @@
             <artifactId>commons-io</artifactId>
             <version>${commons-io.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>${snakeyaml.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -134,6 +140,8 @@
                     <compilerArgs>
                         <arg>--add-exports</arg>
                         <arg>javafx.base/com.sun.javafx=club.youtee.filerename</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.controls/com.sun.javafx.scene.control.behavior=club.youtee.filerename</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
